Thu Mar 27 18:14:12 1997  Ian Lance Taylor  <ian@cygnus.com>

	* sanity.sh (death2): Remove commented out test death2-21.  It
	would now pass, but it duplicates the new test sticky-11.

Thu Mar 27 10:21:19 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (dotest_internal): Write test output to logfile even
	if test succeeds.  This was the behavior prior to 30 Sep 1996.
	See the comment for rationale.

Tue Mar 25 13:26:52 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.h, entries.c (WriteTag): Add arguments nonbranch,
	update_dir, and repository.  Move the server_set_sticky call from
	callers to here.
	* cvs.h, create_adm.c (Create_Admin): New argument nonbranch.
	* cvs.h, entries.c (ParseTag): Add argument nonbranchp.
	* cvs.h (struct stickydirtag): Add field nonbranch.
	* entries.c (Entries_Open): Set it.
	* cvs.h (Vers_TS): Add field nonbranch.
	* vers_ts.c (Version_TS): Copy it from struct stickydirtag.
	* server.c, server.h (server_set_sticky): Add argument nonbranch.
	* add.c, client.c, checkout.c, modules.c, update.c, create_adm.c,
	commit.c: Update callers.
	* add.c (add): If nonbranch, don't add the file on that "branch".
	* commit.c (write_dirnonbranch): New variable.
	(commit_fileproc, commit): Set it.
	(commit_dirleaveproc): Pass it to WriteTag.
	* update.c (rewrite_tag, nonbranch): New variables.
	(update, update_dirent_proc, update_fileproc): Set them.
	(update_filesdoneproc): If rewrite_tag, call WriteTag.
	* sanity.sh (sticky): New tests, test for above fix.

	* version.c: Change version number to 1.9.7.

	* version.c: Version 1.9.6.

Mon Mar 24 13:02:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* entries.c (ParseTag): Add comment about unrecognized characters
	in CVS/Tag file.

	* classify.c (Classify_File): Add comment about how specifying a
	tag (bogusly?) suppresses certain messages.

Fri Mar 21 13:37:46 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.h (struct rcsnode): Add comment about case of PATH.